--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Data
+venv
 
 # Created by https://www.gitignore.io/api/python,intellij+all
 # Edit at https://www.gitignore.io/?templates=python,intellij+all
