--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Data
 venv
 reviews.db
+git
 
 # Created by https://www.gitignore.io/api/python,intellij+all
 # Edit at https://www.gitignore.io/?templates=python,intellij+all
