--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ Data
 venv
 reviews.db
 git
+Archive
 
 # Created by https://www.gitignore.io/api/python,intellij+all
 # Edit at https://www.gitignore.io/?templates=python,intellij+all
