corect product category extraction code

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ venv
 reviews.db
 git
 Archive
+Intermediary/.ipynb_checkpoints
 
 # Created by https://www.gitignore.io/api/python,intellij+all
 # Edit at https://www.gitignore.io/?templates=python,intellij+all
