--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ Data
 venv
 reviews.db
 git
-
+Logs
 Intermediary/.ipynb_checkpoints
 
 # Created by https://www.gitignore.io/api/python,intellij+all
