experiments and corrections

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ Logs
 Intermediary/.ipynb_checkpoints
 Extraction_Profiling/.ipynb_checkpoints
 Profiling/.ipynb_checkpoints/
+wandb
+Scraping/debug.log
+Scraping/geckodriver.log
+Scraping/result.txt
+
 
 # Created by https://www.gitignore.io/api/python,intellij+all
 # Edit at https://www.gitignore.io/?templates=python,intellij+all
